# deck.gl-native-dependencies

./: .gitignore  .travis.yml  README.md  build.sh
arm64-ios/lib/: libdawn_proc.dylib  libdawn_wire.dylib
docs/: iOS-BUILD.md
example/: CMakeLists.txt  test.cpp
patches/arrow/: arrow-iOS-build.patch
patches/dawn/: dawn-iOS-build.patch
patches/shaderc/: shaderc-iOS-build.patch
x64-linux/include/arrow/: stl.h
x64-linux/include/arrow/util/: config.h
x64-linux/include/dawn/: webgpu_cpp.h
x64-linux/include/event2/: event-config.h
x64-linux/include/openssl/: opensslconf.h
x64-linux/include/parquet/: parquet_version.h  schema.h
x64-linux/include/thrift/: config.h
x64-linux/include/uriparser/: UriBase.h
x64-linux/vcpkg/installed/vcpkg/info/: fmt_6.1.2_x64-linux.list  gtest_2019-10-09-1_x64-linux.list  jsoncpp_1.9.2_x64-linux.list  range-v3_0.10.0_x64-linux.list
x64-linux/vcpkg/installed/x64-linux/lib/manual-link/pkgconfig/: gmock_main.pc  gtest_main.pc
x64-linux/vcpkg/installed/x64-linux/lib/pkgconfig/: fmt.pc  gmock.pc  gtest.pc
x64-linux/vcpkg/installed/x64-linux/share/fmt/: fmt-config-version.cmake  fmt-targets.cmake  vcpkg_abi_info.txt
x64-linux/vcpkg/installed/x64-linux/share/gtest/: GTestTargets-release.cmake  GTestTargets.cmake  vcpkg_abi_info.txt
x64-linux/vcpkg/installed/x64-linux/share/jsoncpp/: jsoncppConfig.cmake  vcpkg_abi_info.txt
x64-linux/vcpkg/installed/x64-linux/share/range-v3/: range-v3-targets.cmake  vcpkg_abi_info.txt
x64-osx/lib/: libdawn_proc.dylib  libdawn_wire.dylib
x86_64-ios/include/arrow/util/: config.h
x86_64-ios/lib/: libdawn_proc.dylib  libdawn_wire.dylib
